infra/k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: service-1
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: service-2
  labels:
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: service-3
  labels:
    istio-injection: enabled
